welcome.lessons.welcome.variables.Variables.scala.error
Variables:12: error: type mismatch;
 found   : Unit
 required: Boolean
while(dejafait=nbPas){
              ^